syntax = "proto3";

package conection;

option go_package = "grpc-server/proto";

service LogisticaService {
    rpc EnviarOrden(Orden) returns (RespuestaOrden);
    rpc ConsultarEstado(ConsultaEstadoRequest) returns (EstadoPaquete);
    rpc ObtenerPaquetes(ObtenerPaquetesRequest) returns (ObtenerPaquetesResponse);
    rpc ActualizarEstadoPaquete(ActualizarEstadoRequest) returns (ActualizarEstadoResponse);
}

service CaravanaService {
    rpc ProcesarPaquetes(ProcesarPaquetesRequest) returns (ProcesarPaquetesResponse);
}

message Orden {
    string caravana = 1;
    string escolta = 2;
    string destino = 3;
    string recurso = 4;
    int32 valor = 5;
}

message RespuestaOrden {
    string seguimiento = 1;
    string mensaje = 2;
}

message Paquete {
    int32 id_paquete = 1;
    string seguimiento = 2;
    string tipo = 3;
    int32 valor = 4;
    int32 intentos = 5;
    string estado = 6;
}

message Registro {
    int32 id_paquete = 1;
    string escolta = 2;
    string destino = 3;
    string seguimiento = 4;
}

message ObtenerPaquetesRequest {}

message ObtenerPaquetesResponse {
    repeated Paquete paquetes = 1;
}

message ConsultaEstadoRequest {
    string seguimiento = 1;
}

message EstadoPaquete {
    int32 id_paquete = 1;
    string estado = 2;
    string tipo = 3;
    int32 valor = 4;
    int32 intentos = 5;
}

message ProcesarPaquetesRequest {
    repeated Paquete paquetes = 1;
    repeated Registro registros = 2;  // Aqu√≠ agregamos el campo de registros
}

message ProcesarPaquetesResponse {}

message ActualizarEstadoRequest {
    int32 id_paquete = 1;
    string estado = 2;
    int32 intentos = 3;
    int32 valor = 4;
}

message ActualizarEstadoResponse {
    string mensaje = 1;
}
